--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,10 @@ pandas = "*"
 flask = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
+python-dotenv = "*"
+requests = "*"
+basilica = "*"
+tweepy = "*"
 
 [requires]
 python_version = "3.7"
